Add buttons on the web page to play the game and display the round result on the web page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
         <script src="scripts/main.js" defer></script>
     </head>
     <body>
-
+        <div id="game-result">
+            <div id="player-point"></div>
+            <div id="computer-point"></div>
+            <div id="round-number"></div>
+        </div>
+        <div id="round-result"></div>
+        <div id="button-container">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
     </body>
 </html>
