Complete the game by displaying the match result and a replay button

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     </head>
     <body>
         <div id="game-result">
-            <div id="player-point"></div>
-            <div id="computer-point"></div>
-            <div id="round-number"></div>
+            <div id="player-point">
+                <p>Player Point: </p>
+                <span>0</span>
+            </div>
+            <div id="computer-point">
+                <p>Computer Point: </p>
+                <span>0</span>
+            </div>
+            <div id="round-number">
+                <p>Round Number: </p>
+                <span>1</span>
+            </div>
         </div>
         <div id="round-result"></div>
         <div id="button-container">
