Add keybinds functionality

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
             </div>
             <div id="player-area">
                 <div class="button-container" id="player-divs">
-                    <button class="rock">
+                    <button class="rock" data-key="65">
                         <span>Rock</span>
                         <span id="keybind">Key: A</span>
                     </button>
-                    <button class="paper">
+                    <button class="paper" data-key="83">
                         <span>Paper</span>
                         <span id="keybind">Key: S</span>
                     </button>
-                    <button class="scissors">
+                    <button class="scissors" data-key="68">
                         <span >Scissors</span>
                         <span id="keybind">Key: D</span>
                     </div>
