Fix a bug where the game would not end properly after 5 ties

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html tabindex="-1">
     <head>
         <meta charset="utf-8">
         <title>Rock, Paper, Scissors</title>
@@ -9,11 +9,11 @@
         <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet"> 
     </head>
-    <body>
-        <div id="game-board">
+    <body tabindex="-1">
+        <div id="game-board"> 
             <div id="player-area">
                 <div id="player-name">Computer</div>
-                <div class="button-container" id="computer-hand">
+                <div class="button-container" id="computer-hand"> 
                     <button id="rock">Rock</button>
                     <button id="paper">Paper</button>
                     <button id="scissors">Scissors</button>
